--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cybtldr-app",
   "version": "0.1.0",
+  "homepage": "https://kluelesskk.github.io/psoc-webhid-programmer",
   "private": true,
   "dependencies": {
     "cybtldr-lib": "file:../lib",
@@ -9,10 +10,13 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3"
   },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "publish": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
