--- a/app/package.json
+++ b/app/package.json
@@ -4,8 +4,9 @@
   "homepage": "https://kluelesskk.github.io/psoc-webhid-programmer",
   "private": true,
   "dependencies": {
-    "cybtldr-lib": "file:../lib",
     "@material-ui/core": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "cybtldr-lib": "file:../lib",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3"
